Avoid showing invisible text when loading fonts

--- a/_sass/_font-faces.scss
+++ b/_sass/_font-faces.scss
@@ -4,6 +4,7 @@
   src: url('../fonts/AlteHaasGroteskRegular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 // Alte Haas Grotesk - Bold
@@ -12,4 +13,5 @@
   src: url('../fonts/AlteHaasGroteskBold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
